# rag-business-analyst

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: app.py  embed.py  ingest.py  llm.py  retriever.py  utils.py
