[project]
name = "rag-business-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fpdf2>=2.8.7",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-text-splitters>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",
]
